--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <div class="resume-item pb-0">
               <h4>Sachin Parmar</h4>
 
-                <li>Portland par 127,Orlando, FL</li>
+                <li>Peeragarhi,Paschim Vihar,New Delhi - 110087</li>
                 <li>+91 7017323109</li>
                 <li><a href="mailto:prmarsachin01@gmail.com">prmarsachin01@gmail.com</a></li>
               </ul>
